# rust_blog

./: hoge.py
develop/Rust/rust_study03/: Cargo.toml
develop/Rust/rust_study03/migrations/2018-05-14-064954_Blog/: down.sql  up.sql
develop/Rust/rust_study03/src/: db.rs  main.rs  task.rs
develop/Rust/rust_study03/static/: index.html  index.html.tera
